
Lorsque vous sélectionnez une règle de Tiering lors de la création de volumes, de la réplication de données ou des mises à jour de règles de Tiering existantes, vous trouverez de nouveaux termes qui décrivent les règles de Tiering.

* _Équilibré (auto)_
* _Optimisation des coûts (tous)_
* _Optimisation des performances (snapshots uniquement)_




== 02 mars 2025



=== Amélioration de la gestion automatique de la capacité

Lorsque la gestion automatique de la capacité est activée, l'usine de workloads BlueXP  vérifie à présent si un système de fichiers a atteint son seuil de capacité toutes les 30 minutes au lieu de toutes les 2 heures.

Le paramètre IOPS provisionnées n'est plus affecté lorsque le seuil de capacité est atteint.



=== Snapshots immuables

Vous pouvez désormais verrouiller les snapshots, les rendant immuables, pour une période de conservation spécifique. Le verrouillage empêche les accès non autorisés et les suppressions malveillantes des snapshots. Vous pouvez activer des snapshots immuables lors de la création de règles relatives aux snapshots, lors de la création manuelle de snapshots et après la création de snapshots.



=== Mise à jour des fichiers immuables

Vous pouvez maintenant apporter les modifications suivantes à votre configuration de fichiers immuables : règle de conservation, période de conservation, période de validation automatique et mode d'ajout des volumes.

link:https://docs.netapp.com/us-en/workload-fsx-ontap/manage-immutable-files.html["Gérer les fichiers immuables"]



=== Amélioration de la réplication des données

* Réplication entre comptes : la réplication entre deux comptes AWS est prise en charge dans la console d'usine des workloads BlueXP  ainsi que la gestion de la réplication.